--- a/index.html
+++ b/index.html
@@ -1,10 +1,51 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Campaign Shakti</title>
-  </head>
-  <body>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Campaign Shakti</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+
+  <nav>
     <h1>Campaign Shakti</h1>
-    <p>Website coming soon.</p>
-  </body>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="about.html">About</a></li>
+      <li><a href="work.html">Our Work</a></li>
+      <li><a href="get-involved.html">Get Involved</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    </ul>
+  </nav>
+
+  <header>
+    <h2>Menstrual equity through awareness, access, and dignity.</h2>
+    <p>
+      Campaign Shakti is a student-led nonprofit working to break menstrual stigma
+      and increase access to sanitary products for girls and women in underserved
+      communities in India.
+    </p>
+  </header>
+
+  <section>
+    <h3>Why It Matters</h3>
+    <p>
+      Millions of girls in India lack access to safe menstrual products and education,
+      leading to health risks, missed school, and deep-rooted shame.
+    </p>
+  </section>
+
+  <section>
+    <h3>What We Do</h3>
+    <p>
+      We raise funds and partner with trusted organizations in India to distribute
+      menstrual hygiene products and support education initiatives.
+    </p>
+  </section>
+
+  <footer>
+    <p>© Campaign Shakti</p>
+  </footer>
+
+</body>
 </html>
