--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </nav>
 
   <header>
-    <h2>Menstrual equity through awareness, access, and dignity.</h2>
+    <h2>Menstrual equity through awareness and access.</h2>
     <p>
       Campaign Shakti is a student-led nonprofit working to break menstrual stigma
       and increase access to sanitary products for girls and women in underserved
