--- a/index.html
+++ b/index.html
@@ -38,8 +38,11 @@
   <section>
     <h3>What We Do</h3>
     <p>
-      We raise funds and partner with trusted organizations in India to distribute
-      menstrual hygiene products and support education initiatives.
+     - Raise funds through community campaigns and online donations
+     - Partner with established organizations in India to distribute menstrual hygiene products
+     - Produce educational content addressing menstrual health and stigma
+     - Conduct awareness initiatives in local U.S. communities
+
     </p>
   </section>
 
